--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         </div>
       </div>
     </div>
-    <div class="footer"><span>Copyright © Kirk Longuski 2017</span><span class="optional"></span></div>
+    <div class="footer"><span>Copyright © Kirk Longuski 2017</span><span class="optional">| Did you know that this legal stuff doesn't really do anything? I own the copyright whether I put it here or not.</span></div>
   </body>
   <script src="public/script/serve.js"></script>
 </html>
