--- a/resume.html
+++ b/resume.html
@@ -80,7 +80,7 @@
         </div>
       </div>
     </div>
-    <div class="footer"><span>Copyright © Kirk Longuski 2017</span><span class="optional"></span></div>
+    <div class="footer"><span>Copyright © Kirk Longuski 2017</span></div>
   </body>
   <script src="./public/script/serve.js"></script>
 </html>
