Added styles and lightbox to work, general style fixes for mobile. Mobile now inits with the shrunken header

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div class="topnav mobile-only">
         <div class="nav"><a href="./">home</a></div>
         <div class="nav"><a href="//reddit.com/u/k_longuski">reddit</a></div>
-        <div class="nav"><a href="./resume.html">resume</a></div>
+        <div class="nav"><a href="//drive.google.com/file/d/0B0bcseZsc82KZ0Vrb0JvNFAzMms/view?usp=sharing">resume</a></div>
         <div class="nav"><a href="./work.html">work</a></div>
       </div>
     </div>
@@ -19,7 +19,7 @@
       <div class="leftnav desktop-only">
         <div class="nav"><a href="./">home</a></div>
         <div class="nav"><a href="//reddit.com/u/k_longuski">reddit</a></div>
-        <div class="nav"><a href="./resume.html">resume</a></div>
+        <div class="nav"><a href="//drive.google.com/file/d/0B0bcseZsc82KZ0Vrb0JvNFAzMms/view?usp=sharing">resume</a></div>
         <div class="nav"><a href="./work.html">work</a></div>
       </div>
       <div class="main">
@@ -66,7 +66,7 @@
               </tr>
             </tbody>
           </table>
-          <div class="mobile-only">
+          <div class="mobile-only expertise-mobile">
             <div class="tech">
               <h4>Javascript</h4>
               <h4>Years: 6</h4>
@@ -101,7 +101,7 @@
         </div>
       </div>
     </div>
-    <div class="footer"><span>Copyright © Kirk Longuski 2017<span class="optional">| Did you know that this legal stuff doesn't really do anything? I own the copyright whether I put it here or not.</span></span></div>
+    <div class="footer"><span>Copyright © Kirk Longuski 2017<span class="optional">| I was voted Most Likely to Take Over the World in high school</span></span></div>
   </body>
   <script src="public/script/serve.js"></script>
 </html>
