--- a/resume.html
+++ b/resume.html
@@ -80,7 +80,7 @@
         </div>
       </div>
     </div>
-    <div class="footer"><span>Copyright © Kirk Longuski 2017<span class="optional">| Did you know that this legal stuff doesn't really do anything? I own the copyright whether I put it here or not.</span></span></div>
+    <div class="footer"><span>Copyright © Kirk Longuski 2017<span class="optional">| I was voted Most Likely to Take Over the World in high school</span></span></div>
   </body>
   <script src="./public/script/serve.js"></script>
 </html>
