--- a/work.html
+++ b/work.html
@@ -37,7 +37,7 @@
         </div>
       </div>
     </div>
-    <div class="footer"><span>Copyright © Kirk Longuski 2017</span></div>
+    <div class="footer"><span>Copyright © Kirk Longuski 2017<span class="optional">| Did you know that this legal stuff doesn't really do anything? I own the copyright whether I put it here or not.</span></span></div>
     <div id="lightbox" class="lightbox lightbox-hidden">
       <div id="lightbox-text-content" class="lightbox-text-content"></div><img id="lightbox-image" class="lightbox-image">
     </div>
