--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
         <div class="nav"><a href="./work.html">work</a></div>
       </div>
       <div class="main">
+        <div class="contact">
+          <h3>Contact Me</h3>
+          <p>You can reach me at &nbsp;<a href="mailto:longuskikirk@gmail.com">longuskikirk@gmail.com</a>&nbsp; or &nbsp;<a href="tel:9893720095">989-372-0095</a></p>
+        </div>
         <div class="expertise">
           <h3>Expertise</h3>
           <table class="expertise-table sortable searchable selectable desktop-only">
@@ -101,7 +105,7 @@
         </div>
       </div>
     </div>
-    <div class="footer"><span>Copyright © Kirk Longuski 2017</span></div>
+    <div class="footer"><span>Copyright © Kirk Longuski 2017<span class="optional">| I was voted Most Likely to Take Over the World in high school</span></span></div>
   </body>
   <script src="public/script/serve.js"></script>
 </html>
