--- a/work.html
+++ b/work.html
@@ -24,9 +24,9 @@
       </div>
       <div class="main">
         <div class="recent-work">
-          <h2>Recent Work</h2>
+          <h3>Recent Work</h3>
           <div class="mountain-pass recent-employer">
-            <h3>Mountain Pass Solutions</h3>
+            <h4>Mountain Pass Solutions</h4>
             <p>At Mountain Pass, I developed rich, asynchronous web apps like the workflow builder<img src="./public/images/MPS/workflow_builder.png"></p>
             <p>and the Roster data table<img src="./public/images/MPS/roster_closed.png"></p>
             <p>I also maintained and updated the existing design, from this<img src="./public/images/MPS/old_design.png"></p>
@@ -37,7 +37,7 @@
         </div>
       </div>
     </div>
-    <div class="footer"><span>Copyright © Kirk Longuski 2017<span class="optional">| Did you know that this legal stuff doesn't really do anything? I own the copyright whether I put it here or not.</span></span></div>
+    <div class="footer"><span>Copyright © Kirk Longuski 2017</span></div>
     <div id="lightbox" class="lightbox lightbox-hidden">
       <div id="lightbox-text-content" class="lightbox-text-content"></div><img id="lightbox-image" class="lightbox-image">
     </div>
