--- a/resume.html
+++ b/resume.html
@@ -11,6 +11,7 @@
       <div class="topnav mobile-only">
         <div class="nav"><a href="./">home</a></div>
         <div class="nav"><a href="//reddit.com/u/k_longuski">reddit</a></div>
+        <div class="nav"><a href="./codetest.html">code test</a></div>
         <div class="nav"><a href="//drive.google.com/file/d/0B0bcseZsc82KZ0Vrb0JvNFAzMms/view?usp=sharing">resume</a></div>
         <div class="nav"><a href="./work.html">work</a></div>
       </div>
@@ -19,6 +20,7 @@
       <div class="leftnav desktop-only">
         <div class="nav"><a href="./">home</a></div>
         <div class="nav"><a href="//reddit.com/u/k_longuski">reddit</a></div>
+        <div class="nav"><a href="./codetest.html">code test</a></div>
         <div class="nav"><a href="//drive.google.com/file/d/0B0bcseZsc82KZ0Vrb0JvNFAzMms/view?usp=sharing">resume</a></div>
         <div class="nav"><a href="./work.html">work</a></div>
       </div>
@@ -80,7 +82,7 @@
         </div>
       </div>
     </div>
-    <div class="footer"><span>Copyright © Kirk Longuski 2017<span class="optional">| I was voted Most Likely to Take Over the World in high school</span></span></div>
+    <div class="footer"><span>Copyright © Kirk Longuski 2017</span></div>
   </body>
   <script src="./public/script/serve.js"></script>
 </html>
