--- a/codetest.html
+++ b/codetest.html
@@ -49,9 +49,14 @@
         }
 
         #searchBar {
-            padding: 10px;
+            padding: 11px 10px;
             width: calc(100% - 80px);
             font-size: 16px;
+            border-top-left-radius: 4px;
+            border-bottom-left-radius: 4px;
+            border-width: 1px;
+            border-color: #dddddd !important;
+            border-style: solid;
         }
 
         .main-wrapper {
@@ -67,6 +72,10 @@
             font-size: 16px;
             display: inline-block;
             height: 42px;
+            margin-left: -6px;
+            border-left: none;
+            border-top-right-radius: 4px;
+            border-bottom-right-radius: 4px;
         }
     </style>
 <body>
