--- a/codetest.html
+++ b/codetest.html
@@ -20,7 +20,7 @@
             margin: 0 35px 20px 35px;
             padding: 5px;
             vertical-align: top;
-            font-size: 1rem;
+            font-size: 0;
         }
 
         li span,
@@ -32,11 +32,15 @@
 
         li img {
             display: inline-block;
+            width: 50%;
         }
 
         li .info-wrapper {
+            padding-left: 10px;
             display: inline-block;
             vertical-align: top;
+            width: 50%;
+            font-size: 1rem;
         }
 
         .errorFlasher {
