--- a/codetest.html
+++ b/codetest.html
@@ -10,12 +10,18 @@
             margin: 0;
             font-family: sans-serif;
         }
+
+        .resultsCount {
+            text-align: right;
+        }
+
         ul {
             font-size: 0;
             padding: 0;
-            height: calc(100vh - 250px);
+            height: calc(100vh - 260px);
             overflow: auto;
         }
+
         li {
             list-style-type: none;
             display: block;
@@ -25,6 +31,10 @@
             vertical-align: top;
             font-size: 0;
             border-bottom: solid #dddddd 1px;
+        }
+
+        li.loading {
+            font-size: 1.5rem;
         }
 
         li span,
@@ -65,6 +75,7 @@
             border-width: 1px;
             border-color: #dddddd !important;
             border-style: solid;
+            outline: none !important;
         }
 
         .main-wrapper {
@@ -84,6 +95,17 @@
             border-left: none;
             border-top-right-radius: 4px;
             border-bottom-right-radius: 4px;
+        }
+
+        #searchBtn:active {
+            background: #dddddd;
+        }
+
+        #searchBtn:focus,
+        #searchBtn:active,
+        #searchBar:focus,
+        #searchBar:active {
+            outline: none;
         }
     </style>
 <body>
@@ -227,11 +249,14 @@
     function showAllBooks() {
         var $res = $('#results');
         $res.html('');
+        var totalBooks = 0;
         for(var bookID in booksMaster) {
             if(booksMaster.hasOwnProperty(bookID)) {
+                totalBooks += 1;
                 $res.append(booksMaster[bookID].$book);
             }
         }
+        $('#resultsArea').prepend('<div class="resultsCount">'+totalBooks+' books</div>');
     }
     var $doc = $(document);
     var initSearch = function() {
@@ -240,6 +265,7 @@
             if($input.val().toLowerCase() === 'something' || $input.val().toLowerCase() === 'something though') {
                 console.log('Very clever');
             }
+            $('.resultsCount').remove();
             $('#results').html('<li class="loading">Loading....</li>');
             searchForBooks($input.val(), function (data) {
                 render(data);
