--- a/resume.html
+++ b/resume.html
@@ -5,24 +5,24 @@
     <link href="public/style/serve.css" rel="stylesheet"/>
   </head>
   <body>
-    <div class="header">
+    <header class="header">
       <h1>Kirk Longuski</h1>
       <h2>Ann Arbor Web Developer</h2>
-      <div class="topnav mobile-only">
+      <nav class="topnav mobile-only">
         <div class="nav"><a href="./">home</a></div>
         <div class="nav"><a href="//reddit.com/u/k_longuski">reddit</a></div>
-        <div class="nav"><a href="./codetest.html">code test</a></div>
+        <div class="nav"><a href="./site-code.html">site build and code snippets</a></div>
         <div class="nav"><a href="//drive.google.com/file/d/0B0bcseZsc82KZ0Vrb0JvNFAzMms/view?usp=sharing">resume</a></div>
         <div class="nav"><a href="./work.html">work</a></div>
-      </div>
-    </div>
+      </nav>
+    </header>
     <div class="wrapper">
       <div class="leftnav desktop-only">
-        <div class="nav"><a href="./">home</a></div>
-        <div class="nav"><a href="//reddit.com/u/k_longuski">reddit</a></div>
-        <div class="nav"><a href="./codetest.html">code test</a></div>
-        <div class="nav"><a href="//drive.google.com/file/d/0B0bcseZsc82KZ0Vrb0JvNFAzMms/view?usp=sharing">resume</a></div>
-        <div class="nav"><a href="./work.html">work</a></div>
+        <nav class="nav"><a href="./">home</a></nav>
+        <nav class="nav"><a href="//reddit.com/u/k_longuski">reddit</a></nav>
+        <nav class="nav"><a href="./site-code.html">site build and code snippets</a></nav>
+        <nav class="nav"><a href="//drive.google.com/file/d/0B0bcseZsc82KZ0Vrb0JvNFAzMms/view?usp=sharing">resume</a></nav>
+        <nav class="nav"><a href="./work.html">work</a></nav>
       </div>
       <div class="main">
         <div class="resume">
@@ -82,7 +82,7 @@
         </div>
       </div>
     </div>
-    <div class="footer"><span>Copyright © Kirk Longuski 2017</span></div>
+    <footer class="footer"><span>Copyright © Kirk Longuski 2017</span></footer>
   </body>
   <script src="./public/script/serve.js"></script>
 </html>
