Added much better mobile navigation

--- a/site-code.html
+++ b/site-code.html
@@ -10,18 +10,21 @@
       <h2>Ann Arbor Web Developer</h2>
       <nav class="topnav mobile-only">
         <div class="nav"><a href="./">home</a></div>
-        <div class="nav"><a href="//reddit.com/u/k_longuski">reddit</a></div>
-        <div class="nav"><a href="./site-code.html">site build and code snippets</a></div>
         <div class="nav"><a href="//drive.google.com/file/d/0B0bcseZsc82KZ0Vrb0JvNFAzMms/view?usp=sharing">resume</a></div>
-        <div class="nav"><a href="./work.html">work</a></div>
+        <div class="nav"><a href="#0" class="more-link">more...</a></div>
+        <div class="more-menu">
+          <div class="nav more-hidden"><a href="//reddit.com/u/k_longuski">reddit</a></div>
+          <div class="nav more-hidden"><a href="./site-code.html">site build and code snippets</a></div>
+          <div class="nav more-hidden"><a href="./work.html">work</a></div>
+        </div>
       </nav>
     </header>
     <div class="wrapper">
       <div class="leftnav desktop-only">
         <nav class="nav"><a href="./">home</a></nav>
+        <nav class="nav"><a href="//drive.google.com/file/d/0B0bcseZsc82KZ0Vrb0JvNFAzMms/view?usp=sharing">resume</a></nav>
         <nav class="nav"><a href="//reddit.com/u/k_longuski">reddit</a></nav>
         <nav class="nav"><a href="./site-code.html">site build and code snippets</a></nav>
-        <nav class="nav"><a href="//drive.google.com/file/d/0B0bcseZsc82KZ0Vrb0JvNFAzMms/view?usp=sharing">resume</a></nav>
         <nav class="nav"><a href="./work.html">work</a></nav>
       </div>
       <div class="main">
@@ -228,7 +231,7 @@
         </div>
       </div>
     </div>
-    <footer class="footer"><span>Copyright © Kirk Longuski 2017<span class="optional">| Did you know that this legal stuff doesn't really do anything? I own the copyright whether I put it here or not.</span></span></footer>
+    <footer class="footer"><span>Copyright © Kirk Longuski 2017<span class="optional">| I was voted Most Likely to Take Over the World in high school</span></span></footer>
     <script src="public/script/serve.js"></script>
   </body>
 </html>
