--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <div class="nav"><a href="#0" class="more-link">more...</a></div>
         <div class="more-menu">
           <div class="nav more-hidden"><a href="//reddit.com/u/k_longuski">reddit</a></div>
+          <div class="nav more-hidden"><a href="https://github.com/longooglite/Dead-Simple-Tables">Dead Simple Tables [github]</a></div>
           <div class="nav more-hidden"><a href="./site-code.html">site build and code snippets</a></div>
           <div class="nav more-hidden"><a href="./work.html">work</a></div>
         </div>
@@ -24,6 +25,7 @@
         <nav class="nav"><a href="./">home</a></nav>
         <nav class="nav"><a href="//drive.google.com/file/d/0B0bcseZsc82KZ0Vrb0JvNFAzMms/view?usp=sharing">resume</a></nav>
         <nav class="nav"><a href="//reddit.com/u/k_longuski">reddit</a></nav>
+        <nav class="nav"><a href="https://github.com/longooglite/Dead-Simple-Tables">Dead Simple Tables [github]</a></nav>
         <nav class="nav"><a href="./site-code.html">site build and code snippets</a></nav>
         <nav class="nav"><a href="./work.html">work</a></nav>
       </div>
@@ -110,7 +112,7 @@
         </div>
       </div>
     </div>
-    <footer class="footer"><span>Copyright © Kirk Longuski 2017</span></footer>
+    <footer class="footer"><span>Copyright © Kirk Longuski 2017<span class="optional">| Did you know that this legal stuff doesn't really do anything? I own the copyright whether I put it here or not.</span></span></footer>
   </body>
   <script src="public/script/serve.js"></script>
 </html>
