Added DotSignal experience and Dead Simple Tables side project

--- a/work.html
+++ b/work.html
@@ -39,12 +39,21 @@
             <p>I also maintained and updated the existing design, from this<img src="./public/images/MPS/old_design.png"></p>
             <p>to this<img src="./public/images/MPS/workflow.png"></p>
           </div>
-          <div class="dotsignal recent-employer"></div>
-          <div class="dst side-project"></div>
+          <div class="dotsignal recent-employer">
+            <h4>DotSignal Inc</h4>
+            <p>At DotSignal I developed the mobile search app from scratch.<img src="./public/images/DS/ds-app.png" class="portrait"></p>
+            <p>It was a single page rich web app for finding properties and connecting with agents.<img src="./public/images/DS/ds-list.png" class="portrait"></p>
+            <p>I wrote the front and back ends on top of their data structure,<img src="./public/images/DS/ds-detail.png" class="portrait"></p>
+            <p>and designed the experience to be consistent with their brand.<img src="./public/images/DS/ds-location.png" class="portrait"></p>
+          </div>
+          <div class="dst side-project">
+            <h4>Dead Simple Tables</h4>
+            <p>As a side project, I've been developing Dead Simple Tables or DST, which has been used on the home page for this application<a href="https://github.com/longooglite/Dead-Simple-Tables">You can view the project here.</a></p>
+          </div>
         </div>
       </div>
     </div>
-    <footer class="footer"><span>Copyright © Kirk Longuski 2017<span class="optional">| I was voted Most Likely to Take Over the World in high school</span></span></footer>
+    <footer class="footer"><span>Copyright © Kirk Longuski 2017</span></footer>
     <div id="lightbox" class="lightbox lightbox-hidden">
       <div id="lightbox-text-content" class="lightbox-text-content"></div><img id="lightbox-image" class="lightbox-image">
     </div>
