--- a/resume.html
+++ b/resume.html
@@ -87,7 +87,7 @@
         </div>
       </div>
     </div>
-    <footer class="footer"><span>Copyright © Kirk Longuski 2017<span class="optional">| I was voted Most Likely to Take Over the World in high school</span></span></footer>
+    <footer class="footer"><span>Copyright © Kirk Longuski 2017</span></footer>
   </body>
   <script src="./public/script/serve.js"></script>
 </html>
