--- a/work.html
+++ b/work.html
@@ -6,29 +6,16 @@
   </head>
   <body>
     <header class="header">
-      <h1>Kirk Longuski</h1>
-      <h2>Ann Arbor Web Developer</h2>
-      <nav class="topnav mobile-only">
-        <div class="nav"><a href="./">home</a></div>
-        <div class="nav"><a href="//drive.google.com/file/d/0B0bcseZsc82KZ0Vrb0JvNFAzMms/view?usp=sharing">resume</a></div>
-        <div class="nav"><a href="#0" class="more-link">more...</a></div>
-        <div class="more-menu">
-          <div class="nav more-hidden"><a href="//reddit.com/u/k_longuski">reddit</a></div>
-          <div class="nav more-hidden"><a href="https://github.com/longooglite/Dead-Simple-Tables">Dead Simple Tables [github]</a></div>
-          <div class="nav more-hidden"><a href="./site-code.html">site build and code snippets</a></div>
-          <div class="nav more-hidden"><a href="./work.html">work</a></div>
+      <h1 class="header__title">Kirk Longuski</h1>
+      <h2 class="header__subtitle">Ann Arbor Web Developer</h2>
+      <nav class="nav__wrapper nav__wrapper--horizontal mobile-only"><a href="./" class="nav__link nav__link--horizontal">home</a><a href="//drive.google.com/file/d/0B0bcseZsc82KZ0Vrb0JvNFAzMms/view?usp=sharing" class="nav__link nav__link--horizontal">resume</a><a id="show-more-trigger" href="#0" class="nav__trigger nav__trigger--horizontal">more...</a>
+        <div class="nav__overflow nav__overflow--hidden"><a href="//reddit.com/u/k_longuski" class="nav__link nav__link--overflow">reddit</a><a href="https://github.com/longooglite/Dead-Simple-Tables" class="nav__link nav__link--overflow">Dead Simple Tables [github]</a><a href="./site-code.html" class="nav__link nav__link--overflow">site build and code snippets</a><a href="./work.html" class="nav__link nav__link--overflow">work</a>
         </div>
       </nav>
     </header>
     <div class="wrapper">
-      <div class="leftnav desktop-only">
-        <nav class="nav"><a href="./">home</a></nav>
-        <nav class="nav"><a href="//drive.google.com/file/d/0B0bcseZsc82KZ0Vrb0JvNFAzMms/view?usp=sharing">resume</a></nav>
-        <nav class="nav"><a href="//reddit.com/u/k_longuski">reddit</a></nav>
-        <nav class="nav"><a href="https://github.com/longooglite/Dead-Simple-Tables">Dead Simple Tables [github]</a></nav>
-        <nav class="nav"><a href="./site-code.html">site build and code snippets</a></nav>
-        <nav class="nav"><a href="./work.html">work</a></nav>
-      </div>
+      <nav class="nav__wrapper nav__wrapper--vertical desktop-only"><a href="./" class="nav__link nav__link--vertical">home</a><a href="//drive.google.com/file/d/0B0bcseZsc82KZ0Vrb0JvNFAzMms/view?usp=sharing" class="nav__link nav__link--vertical">resume</a><a href="//reddit.com/u/k_longuski" class="nav__link nav__link--vertical">reddit</a><a href="https://github.com/longooglite/Dead-Simple-Tables" class="nav__link nav__link--vertical">Dead Simple Tables [github]</a><a href="./site-code.html" class="nav__link nav__link--vertical">site build and code snippets</a><a href="./work.html" class="nav__link nav__link--vertical">work</a>
+      </nav>
       <div class="main">
         <div class="recent-work">
           <h3>Recent Work</h3>
@@ -53,7 +40,7 @@
         </div>
       </div>
     </div>
-    <footer class="footer"><span>Copyright © Kirk Longuski 2017</span></footer>
+    <footer class="footer"><span>Copyright © Kirk Longuski 2017<span class="optional">| I was voted Most Likely to Take Over the World in high school</span></span></footer>
     <div id="lightbox" class="lightbox lightbox-hidden">
       <div id="lightbox-text-content" class="lightbox-text-content"></div><img id="lightbox-image" class="lightbox-image">
     </div>
