--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@
         </div>
       </div>
     </div>
-    <footer class="footer"><span>Copyright © Kirk Longuski 2017</span></footer>
+    <footer class="footer"><span class="footer__text">Copyright © Kirk Longuski 2017</span><span class="footer__text--optional">| I was voted Most Likely to Take Over the World in high school</span>
+    </footer>
   </body>
   <script src="public/script/serve.js"></script>
 </html>
