--- a/resume.html
+++ b/resume.html
@@ -78,7 +78,8 @@
         </div>
       </div>
     </div>
-    <footer class="footer"><span>Copyright © Kirk Longuski 2017<span class="optional">| Did you know that this legal stuff doesn't really do anything? I own the copyright whether I put it here or not.</span></span></footer>
+    <footer class="footer"><span class="footer__text">Copyright © Kirk Longuski 2017</span>
+    </footer>
   </body>
   <script src="./public/script/serve.js"></script>
 </html>
