--- a/work.html
+++ b/work.html
@@ -19,28 +19,45 @@
       <div class="main">
         <div class="recent-work">
           <h3>Recent Work</h3>
-          <div class="mountain-pass recent-employer">
+          <div class="image-pair__list">
             <h4>Mountain Pass Solutions</h4>
-            <p>At Mountain Pass, I developed rich, asynchronous web apps like the workflow builder<img src="./public/images/MPS/workflow_builder.png"></p>
-            <p>and the Roster data table<img src="./public/images/MPS/roster_closed.png"></p>
-            <p>I also maintained and updated the existing design, from this<img src="./public/images/MPS/old_design.png"></p>
-            <p>to this<img src="./public/images/MPS/workflow.png"></p>
+                    <div class="image-pair__container">
+                      <p class="image-pair__text">At Mountain Pass, I developed rich, asynchronous web apps like the workflow builder</p><img src="./public/images/MPS/workflow_builder.png" class="image-pair__img image-pair__img--landscape">
+                    </div>
+                    <div class="image-pair__container">
+                      <p class="image-pair__text">and the Roster data table</p><img src="./public/images/MPS/roster_closed.png" class="image-pair__img image-pair__img--landscape">
+                    </div>
+                    <div class="image-pair__container">
+                      <p class="image-pair__text">I also maintained and updated the existing design, from this</p><img src="./public/images/MPS/old_design.png" class="image-pair__img image-pair__img--landscape">
+                    </div>
+                    <div class="image-pair__container">
+                      <p class="image-pair__text">to this</p><img src="./public/images/MPS/workflow.png" class="image-pair__img image-pair__img--landscape">
+                    </div>
           </div>
-          <div class="dotsignal recent-employer">
+          <div class="image-pair__list">
             <h4>DotSignal Inc</h4>
-            <p>At DotSignal I developed the mobile search app from scratch.<img src="./public/images/DS/ds-app.png" class="portrait"></p>
-            <p>It was a single page rich web app for finding properties and connecting with agents.<img src="./public/images/DS/ds-list.png" class="portrait"></p>
-            <p>I wrote the front and back ends on top of their data structure,<img src="./public/images/DS/ds-detail.png" class="portrait"></p>
-            <p>and designed the experience to be consistent with their brand.<img src="./public/images/DS/ds-location.png" class="portrait"></p>
+                    <div class="image-pair__container">
+                      <p class="image-pair__text">At DotSignal I developed the mobile search app from scratch.</p><img src="./public/images/DS/ds-app.png" class="image-pair__img image-pair__img--portrait">
+                    </div>
+                    <div class="image-pair__container">
+                      <p class="image-pair__text">It was a single page rich web app for finding properties and connecting with agents.</p><img src="./public/images/DS/ds-list.png" class="image-pair__img image-pair__img--portrait">
+                    </div>
+                    <div class="image-pair__container">
+                      <p class="image-pair__text">I wrote the front and back ends on top of their data structure,</p><img src="./public/images/DS/ds-detail.png" class="image-pair__img image-pair__img--portrait">
+                    </div>
+                    <div class="image-pair__container">
+                      <p class="image-pair__text">and designed the experience to be consistent with their brand.</p><img src="./public/images/DS/ds-location.png" class="image-pair__img image-pair__img--portrait">
+                    </div>
           </div>
-          <div class="dst side-project">
+          <div>
             <h4>Dead Simple Tables</h4>
             <p>As a side project, I've been developing Dead Simple Tables or DST, which has been used on the home page for this application<a href="https://github.com/longooglite/Dead-Simple-Tables">You can view the project here.</a></p>
           </div>
         </div>
       </div>
     </div>
-    <footer class="footer"><span>Copyright © Kirk Longuski 2017<span class="optional">| I was voted Most Likely to Take Over the World in high school</span></span></footer>
+    <footer class="footer"><span class="footer__text">Copyright © Kirk Longuski 2017</span>
+    </footer>
     <div id="lightbox" class="lightbox lightbox-hidden">
       <div id="lightbox-text-content" class="lightbox-text-content"></div><img id="lightbox-image" class="lightbox-image">
     </div>
