Dogfooding dead simple tables into the site

--- a/site-code.html
+++ b/site-code.html
@@ -150,7 +150,8 @@
             </p>
             <p>
               The most JavaScript intensive portion is the expertise table, what with the sorting
-              and the hover states. In fact, I spun the table sorting off into a separate project, which you can see at&nbsp;<a href="https://github.com/longooglite/Dead-Simple-Tables">Dead Simple Tables</a>
+              and the hover states. In fact, I spun the table sorting off into a separate project, which you can see at.
+              as of right now, Dead Simple Tables is dogfooded into this site.&nbsp;<a href="https://github.com/longooglite/Dead-Simple-Tables">Dead Simple Tables</a>
             </p>
           </div>
           <div class="build">
@@ -220,7 +221,7 @@
         </div>
       </div>
     </div>
-    <footer class="footer"><span class="footer__text">Copyright © Kirk Longuski 2017</span><span class="footer__text--optional">| I was voted Most Likely to Take Over the World in high school</span>
+    <footer class="footer"><span class="footer__text">Copyright © Kirk Longuski 2017</span>
     </footer>
     <script src="public/script/serve.js"></script>
   </body>
