--- a/index.html
+++ b/index.html
@@ -102,5 +102,6 @@
     <footer class="footer"><span class="footer__text">Copyright © Kirk Longuski 2017</span><span class="footer__text--optional">| I was voted Most Likely to Take Over the World in high school</span>
     </footer>
   </body>
+  <script src="https://cdn.rawgit.com/longooglite/Dead-Simple-Tables/master/dst.min.js"></script>
   <script src="public/script/serve.js"></script>
 </html>
