--- a/resume.html
+++ b/resume.html
@@ -78,7 +78,7 @@
         </div>
       </div>
     </div>
-    <footer class="footer"><span class="footer__text">Copyright © Kirk Longuski 2017</span>
+    <footer class="footer"><span class="footer__text">Copyright © Kirk Longuski 2017</span><span class="footer__text--optional">| Did you know that this legal stuff doesn't really do anything? I own the copyright whether I put it here or not.</span>
     </footer>
   </body>
   <script src="./public/script/serve.js"></script>
