Changed base font size to 18px

--- a/site-code.html
+++ b/site-code.html
@@ -221,7 +221,7 @@
         </div>
       </div>
     </div>
-    <footer class="footer"><span class="footer__text">Copyright © Kirk Longuski 2017</span><span class="footer__text--optional">| I was voted Most Likely to Take Over the World in high school</span>
+    <footer class="footer"><span class="footer__text">Copyright © Kirk Longuski 2017</span>
     </footer>
     <script src="public/script/serve.js"></script>
   </body>
