--- a/site-code.html
+++ b/site-code.html
@@ -185,7 +185,7 @@
               the big one was flexibility, which I needed for IE support, and since I was doing that one anyone I decided why not do the rest
               Autoprefixer helps with browser coverage, flexibility adds IE support for flex box via custom CSS properties,
               fontmagic retrieves the fonts you're currently enjoying and is a really impressive piece of software
-              which you can find&nbsp;<a href="https://github.com/jonathantneal/postcss-font-magician">here.</a>and finally CSSNano squishes it all together.
+              which you can find&nbsp;<a href="https://github.com/jonathantneal/postcss-font-magician">here</a>, and finally CSSNano squishes it all together.
             </p><code>
               <pre>gulp.task('postsass', function(){
     var source = "./public/style/*.scss";
@@ -221,7 +221,7 @@
         </div>
       </div>
     </div>
-    <footer class="footer"><span class="footer__text">Copyright © Kirk Longuski 2017</span><span class="footer__text--optional">| I was voted Most Likely to Take Over the World in high school</span>
+    <footer class="footer"><span class="footer__text">Copyright © Kirk Longuski 2017</span><span class="footer__text--optional">| Did you know that this legal stuff doesn't really do anything? I own the copyright whether I put it here or not.</span>
     </footer>
     <script src="public/script/serve.js"></script>
   </body>
