Style changes, BEMified expertise section

--- a/index.html
+++ b/index.html
@@ -23,83 +23,78 @@
         </div>
         <div class="expertise">
           <h3>Expertise</h3>
-          <table class="expertise-table sortable searchable selectable desktop-only">
-            <thead>
-              <tr>
-                <th>Technology</th>
-                <th>Years experience</th>
-                <th>Associated technologies</th>
+          <table class="table sortable searchable selectable desktop-only">
+            <thead class="table__head">
+              <tr class="table__row">
+                <th class="table__header">Technology</th>
+                <th class="table__header">Years experience</th>
+                <th class="table__header">Associated technologies</th>
               </tr>
             </thead>
-            <tbody>
-              <tr>
-                <td>Javascript</td>
-                <td>6</td>
-                <td><span>AJAX</span><span>jQuery</span><span>Node</span><span>ES6</span><span>Grunt/Gulp</span><span>React</span><span>Angular</span><span>Vue</span>
+            <tbody class="table__body">
+              <tr class="table__row">
+                <td class="table__cell">Javascript</td>
+                <td class="table__cell">6</td>
+                <td class="table__cell"><span class="table__text">AJAX</span><span class="table__text">jQuery</span><span class="table__text">Node</span><span class="table__text">ES6</span><span class="table__text">Grunt/Gulp</span><span class="table__text">React</span><span class="table__text">Angular</span><span class="table__text">Vue</span>
                 </td>
               </tr>
-              <tr>
-                <td>CSS</td>
-                <td>7</td>
-                <td><span>CSS3</span><span>Bootstrap</span><span>PostCSS</span><span>Sass</span><span>Less</span>
+              <tr class="table__row">
+                <td class="table__cell">CSS</td>
+                <td class="table__cell">7</td>
+                <td class="table__cell"><span class="table__text">CSS3</span><span class="table__text">Bootstrap</span><span class="table__text">PostCSS</span><span class="table__text">Sass</span><span class="table__text">Less</span>
                 </td>
               </tr>
-              <tr>
-                <td>HTML</td>
-                <td>7</td>
-                <td><span>HTML5</span><span>Jade</span>
+              <tr class="table__row">
+                <td class="table__cell">HTML</td>
+                <td class="table__cell">7</td>
+                <td class="table__cell"><span class="table__text">HTML5</span><span class="table__text">Jade</span>
                 </td>
               </tr>
-              <tr>
-                <td>PHP</td>
-                <td>5</td>
-                <td><span>Laravel</span><span>Zend</span>
+              <tr class="table__row">
+                <td class="table__cell">PHP</td>
+                <td class="table__cell">5</td>
+                <td class="table__cell"><span class="table__text">Laravel</span><span class="table__text">Zend</span>
                 </td>
               </tr>
-              <tr>
-                <td>Python</td>
-                <td>2</td>
-                <td><span>Pyramid</span>
+              <tr class="table__row">
+                <td class="table__cell">Python</td>
+                <td class="table__cell">2</td>
+                <td class="table__cell"><span class="table__text">Pyramid</span>
                 </td>
               </tr>
             </tbody>
           </table>
-          <div class="mobile-only expertise-mobile">
-            <div class="tech">
-              <h4>Javascript</h4>
-              <h4>Years: 6</h4>
-              <div class="associated">Also:<span>AJAX</span><span>jQuery</span><span>Node</span><span>ES6</span><span>Grunt/Gulp</span><span>React</span><span>Angular</span><span>Vue</span>
+          <div class="mobile-only expertise-mobile detail-list">
+            <div class="detail-list__item">
+              <h4 class="detail-list__title">Javascript</h4><span class="detail-list__subtitle">Years: 6</span>
+              <div class="detail-list__details">Also:<span class="detail-list__detail">AJAX</span><span class="detail-list__detail">jQuery</span><span class="detail-list__detail">Node</span><span class="detail-list__detail">ES6</span><span class="detail-list__detail">Grunt/Gulp</span><span class="detail-list__detail">React</span><span class="detail-list__detail">Angular</span><span class="detail-list__detail">Vue</span>
               </div>
             </div>
-            <div class="tech">
-              <h4>CSS</h4>
-              <h4>Years: 7</h4>
-              <div class="associated">Also:<span>CSS3</span><span>Bootstrap</span><span>PostCSS</span><span>Sass</span><span>Less</span>
+            <div class="detail-list__item">
+              <h4 class="detail-list__title">CSS</h4><span class="detail-list__subtitle">Years: 7</span>
+              <div class="detail-list__details">Also:<span class="detail-list__detail">CSS3</span><span class="detail-list__detail">Bootstrap</span><span class="detail-list__detail">PostCSS</span><span class="detail-list__detail">Sass</span><span class="detail-list__detail">Less</span>
               </div>
             </div>
-            <div class="tech">
-              <h4>HTML</h4>
-              <h4>Years: 7</h4>
-              <div class="associated">Also:<span>HTML5</span><span>Jade</span>
+            <div class="detail-list__item">
+              <h4 class="detail-list__title">HTML</h4><span class="detail-list__subtitle">Years: 7</span>
+              <div class="detail-list__details">Also:<span class="detail-list__detail">HTML5</span><span class="detail-list__detail">Jade</span>
               </div>
             </div>
-            <div class="tech">
-              <h4>PHP</h4>
-              <h4>Years: 5</h4>
-              <div class="associated">Also:<span>Laravel</span><span>Zend</span>
+            <div class="detail-list__item">
+              <h4 class="detail-list__title">PHP</h4><span class="detail-list__subtitle">Years: 5</span>
+              <div class="detail-list__details">Also:<span class="detail-list__detail">Laravel</span><span class="detail-list__detail">Zend</span>
               </div>
             </div>
-            <div class="tech">
-              <h4>Python</h4>
-              <h4>Years: 2</h4>
-              <div class="associated">Also:<span>Pyramid</span>
+            <div class="detail-list__item">
+              <h4 class="detail-list__title">Python</h4><span class="detail-list__subtitle">Years: 2</span>
+              <div class="detail-list__details">Also:<span class="detail-list__detail">Pyramid</span>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <footer class="footer"><span class="footer__text">Copyright © Kirk Longuski 2017</span><span class="footer__text--optional">|Did you know that this legal stuff doesn't really do anything? I own the copyright whether I put it here or not.</span>
+    <footer class="footer"><span class="footer__text">Copyright © Kirk Longuski 2017</span>
     </footer>
   </body>
   <script src="https://cdn.rawgit.com/longooglite/Dead-Simple-Tables/master/dst.min.js"></script>
