Changed font color to be more readable

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="main">
         <div class="contact">
           <h3>Contact Me</h3>
-          <p>You can reach me at &nbsp;<a href="mailto:longuskikirk@gmail.com">longuskikirk@gmail.com</a>&nbsp; or &nbsp;<a href="tel:9893720095">989-372-0095</a></p>
+          <p>You can reach me at &nbsp;<a href="mailto:longuskikirk@gmail.com">longuskikirk@gmail.com</a>&nbsp;or&nbsp;<a href="tel:9893720095">989-372-0095</a></p>
         </div>
         <div class="expertise">
           <h3>Expertise</h3>
@@ -94,7 +94,7 @@
         </div>
       </div>
     </div>
-    <footer class="footer"><span class="footer__text">Copyright © Kirk Longuski 2017</span><span class="footer__text--optional">|Did you know that this legal stuff doesn't really do anything? I own the copyright whether I put it here or not.</span>
+    <footer class="footer"><span class="footer__text">Copyright © Kirk Longuski 2017</span><span class="footer__text--optional">|I was voted Most Likely to Take Over the World in high school</span>
     </footer>
   </body>
   <script src="https://cdn.rawgit.com/longooglite/Dead-Simple-Tables/master/dst.min.js"></script>
