Added anchors to work examples

--- a/work.html
+++ b/work.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <header class="header">
-      <h1 class="header__title">Kirk Longuski</h1>
+      <h1 class="header__title"><a href="./" class="header__link">Kirk Longuski</a></h1>
       <h2 class="header__subtitle">Ann Arbor Web Developer</h2>
       <nav class="nav__wrapper nav__wrapper--horizontal mobile-only"><a href="./" class="nav__link nav__link--horizontal">home</a><a href="//drive.google.com/file/d/0B0bcseZsc82KZ0Vrb0JvNFAzMms/view?usp=sharing" class="nav__link nav__link--horizontal">resume</a><a id="show-more-trigger" href="#0" class="nav__trigger nav__trigger--horizontal">more...</a>
         <div class="nav__overflow nav__overflow--hidden"><a href="//reddit.com/u/k_longuski" class="nav__link nav__link--overflow">reddit</a><a href="https://github.com/longooglite/Dead-Simple-Tables" class="nav__link nav__link--overflow">Dead Simple Tables [github]</a><a href="./site-code.html" class="nav__link nav__link--overflow">site build and code snippets</a><a href="./work.html" class="nav__link nav__link--overflow">work</a>
@@ -20,7 +20,7 @@
         <div class="recent-work">
           <h3>Recent Work</h3>
           <div class="image-pair__list">
-            <h4>Mountain Pass Solutions</h4>
+            <h4 id="mps">Mountain Pass Solutions</h4>
                     <div class="image-pair__container">
                       <p class="image-pair__text">At Mountain Pass, I developed rich, asynchronous web apps like the workflow builder</p><img src="./public/images/MPS/workflow_builder.png" class="image-pair__img image-pair__img--landscape">
                     </div>
@@ -35,7 +35,7 @@
                     </div>
           </div>
           <div class="image-pair__list">
-            <h4>DotSignal Inc</h4>
+            <h4 id="dsi">DotSignal Inc</h4>
                     <div class="image-pair__container">
                       <p class="image-pair__text">At DotSignal I developed the mobile search app from scratch.</p><img src="./public/images/DS/ds-app.png" class="image-pair__img image-pair__img--portrait">
                     </div>
@@ -50,7 +50,7 @@
                     </div>
           </div>
           <div>
-            <h4>Dead Simple Tables</h4>
+            <h4 id="dst">Dead Simple Tables</h4>
             <p>As a side project, I've been developing Dead Simple Tables or DST, which has been used on the home page for this application<a href="https://github.com/longooglite/Dead-Simple-Tables">You can view the project here.</a></p>
           </div>
         </div>
