--- a/site-code.html
+++ b/site-code.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <header class="header">
-      <h1 class="header__title">Kirk Longuski</h1>
+      <h1 class="header__title"><a href="./" class="header__link">Kirk Longuski</a></h1>
       <h2 class="header__subtitle">Ann Arbor Web Developer</h2>
       <nav class="nav__wrapper nav__wrapper--horizontal mobile-only"><a href="./" class="nav__link nav__link--horizontal">home</a><a href="//drive.google.com/file/d/0B0bcseZsc82KZ0Vrb0JvNFAzMms/view?usp=sharing" class="nav__link nav__link--horizontal">resume</a><a id="show-more-trigger" href="#0" class="nav__trigger nav__trigger--horizontal">more...</a>
         <div class="nav__overflow nav__overflow--hidden"><a href="//reddit.com/u/k_longuski" class="nav__link nav__link--overflow">reddit</a><a href="https://github.com/longooglite/Dead-Simple-Tables" class="nav__link nav__link--overflow">Dead Simple Tables [github]</a><a href="./site-code.html" class="nav__link nav__link--overflow">site build and code snippets</a><a href="./work.html" class="nav__link nav__link--overflow">work</a>
@@ -221,7 +221,7 @@
         </div>
       </div>
     </div>
-    <footer class="footer"><span class="footer__text">Copyright © Kirk Longuski 2017</span>
+    <footer class="footer"><span class="footer__text">Copyright © Kirk Longuski 2017</span><span class="footer__text--optional">|I was voted Most Likely to Take Over the World in high school</span>
     </footer>
     <script src="public/script/serve.js"></script>
   </body>
