--- a/work.html
+++ b/work.html
@@ -8,13 +8,13 @@
     <header class="header">
       <h1 class="header__title"><a href="./" class="header__link">Kirk Longuski</a></h1>
       <h2 class="header__subtitle">Ann Arbor Web Developer</h2>
-      <nav class="nav__wrapper nav__wrapper--horizontal mobile-only"><a href="./" class="nav__link nav__link--horizontal">home</a><a href="//drive.google.com/file/d/0B0bcseZsc82KZ0Vrb0JvNFAzMms/view?usp=sharing" class="nav__link nav__link--horizontal">resume</a><a id="show-more-trigger" href="#0" class="nav__trigger nav__trigger--horizontal">more...</a>
+      <nav class="nav__wrapper nav__wrapper--horizontal mobile-only"><a href="./" class="nav__link nav__link--horizontal">home</a><a href="//drive.google.com/file/d/1VBmezzae2BHA52Iff2zDaoNC5xp1SBYb/view?usp=sharing" class="nav__link nav__link--horizontal">resume</a><a id="show-more-trigger" href="#0" class="nav__trigger nav__trigger--horizontal">more...</a>
         <div class="nav__overflow nav__overflow--hidden"><a href="//reddit.com/u/k_longuski" class="nav__link nav__link--overflow">reddit</a><a href="https://github.com/longooglite/Dead-Simple-Tables" class="nav__link nav__link--overflow">Dead Simple Tables [github]</a><a href="./site-code.html" class="nav__link nav__link--overflow">site build and code snippets</a><a href="./work.html" class="nav__link nav__link--overflow">work</a>
         </div>
       </nav>
     </header>
     <div class="wrapper">
-      <nav class="nav__wrapper nav__wrapper--vertical desktop-only"><a href="./" class="nav__link nav__link--vertical">home</a><a href="//drive.google.com/file/d/0B0bcseZsc82KZ0Vrb0JvNFAzMms/view?usp=sharing" class="nav__link nav__link--vertical">resume</a><a href="//reddit.com/u/k_longuski" class="nav__link nav__link--vertical">reddit</a><a href="https://github.com/longooglite/Dead-Simple-Tables" class="nav__link nav__link--vertical">Dead Simple Tables [github]</a><a href="./site-code.html" class="nav__link nav__link--vertical">site build and code snippets</a><a href="./work.html" class="nav__link nav__link--vertical">work</a>
+      <nav class="nav__wrapper nav__wrapper--vertical desktop-only"><a href="./" class="nav__link nav__link--vertical">home</a><a href="//drive.google.com/file/d/1VBmezzae2BHA52Iff2zDaoNC5xp1SBYb/view?usp=sharing" class="nav__link nav__link--vertical">resume</a><a href="//reddit.com/u/k_longuski" class="nav__link nav__link--vertical">reddit</a><a href="https://github.com/longooglite/Dead-Simple-Tables" class="nav__link nav__link--vertical">Dead Simple Tables [github]</a><a href="./site-code.html" class="nav__link nav__link--vertical">site build and code snippets</a><a href="./work.html" class="nav__link nav__link--vertical">work</a>
       </nav>
       <div class="main">
         <div class="recent-work">
@@ -56,7 +56,7 @@
         </div>
       </div>
     </div>
-    <footer class="footer"><span class="footer__text">Copyright © Kirk Longuski 2017</span>
+    <footer class="footer"><span class="footer__text">Copyright © Kirk Longuski 2018</span><span class="footer__text--optional">|Did you know that this legal stuff doesn't really do anything? I own the copyright whether I put it here or not.</span>
     </footer>
     <div id="lightbox" class="lightbox lightbox-hidden">
       <div id="lightbox-text-content" class="lightbox-text-content"></div><img id="lightbox-image" class="lightbox-image">
