--- a/index.html
+++ b/index.html
@@ -97,6 +97,6 @@
     <footer class="footer"><span class="footer__text">Copyright © Kirk Longuski 2020</span>
     </footer>
   </body>
-  <script src="https://cdn.rawgit.com/longooglite/Dead-Simple-Tables/master/dst.min.js"></script>
+  <script src="public/script/sortableTables.js"></script>
   <script src="public/script/serve.js"></script>
 </html>
